Add "tool-demo-ls" to demonstrate directory listing with tool calling using GPULlama3 with TornadoVM